"Simplified for dev. applications."

--- a/examples/resume/certifications.tex
+++ b/examples/resume/certifications.tex
@@ -12,20 +12,20 @@
 \vspace{-0.25cm}
 
 %---------------------------------------------------------
-  \cventry
-    {SAP Intelligent Robotic Process Automation in a Nutshell (24.0/30)} % Certificate designation
-    {\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
-    {Online} % Location
-    %{} % Location
-    %{Sept 17, 2018 - Oct 16, 2018} % Date(s)      
-    {Sept. 2019 - Oct. 2019} % Date(s)          
-    {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities  
-        \item[] {Online Certificate: \url{https://open.sap.com/verify/xolav-kibal-bifaf-kyfid-rysek}} %Certificate URL 
-        \item[] {Valid from July 1, 2020 - Present} % Validity
-      \end{cvitems}
-    }
-    \vspace{-0.1cm}
+%  \cventry
+%    {SAP Intelligent Robotic Process Automation in a Nutshell (24.0/30)} % Certificate designation
+%    {\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+%    {Online} % Location
+%    %{} % Location
+%    %{Sept 17, 2018 - Oct 16, 2018} % Date(s)      
+%    {Sept. 2019 - Oct. 2019} % Date(s)          
+%    {
+%	    \begin{cvitems} % Description(s) of tasks/responsibilities  
+%        \item[] {Online Certificate: \url{https://open.sap.com/verify/xolav-kibal-bifaf-kyfid-rysek}} %Certificate URL 
+%        \item[] {Valid from July 1, 2020 - Present} % Validity
+%      \end{cvitems}
+%    }
+%    \vspace{-0.1cm}
 %---------------------------------------------------------
   \cventry
     {Build Mobile Applications with SAP Cloud Platform Mobile Services (227.8/300)} % Certificate designation
@@ -59,21 +59,21 @@
     }   
     \vspace{-0.1cm}
 %---------------------------------------------------------
-  \cventry
-    {Cloud-Native Development with SAP Cloud Platform* (249.1/360)} % Certificate designation
-    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
-    {} % Certifacion entity
-    %{Online} % Location
-    {} % Location
-    %{Apr. 10, 2018 - May 30, 2018} % Date(s)      
-    {Apr. 2018 - May 2018} % Date(s)          
-    {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities     
-        \item[] {Online Certificate: \url{https://open.sap.com/verify/xosen-nykel-vybup-susig-sihim}} %Certificate URL 
-        \item[] {Valid from May 30, 2018 - Present} % Validity
-      \end{cvitems}
-    }   
-    \vspace{-0.1cm}
+%  \cventry
+%    {Cloud-Native Development with SAP Cloud Platform* (249.1/360)} % Certificate designation
+%    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+%    {} % Certifacion entity
+%    %{Online} % Location
+%    {} % Location
+%    %{Apr. 10, 2018 - May 30, 2018} % Date(s)      
+%    {Apr. 2018 - May 2018} % Date(s)          
+%    {
+%	    \begin{cvitems} % Description(s) of tasks/responsibilities     
+%        \item[] {Online Certificate: \url{https://open.sap.com/verify/xosen-nykel-vybup-susig-sihim}} %Certificate URL 
+%        \item[] {Valid from May 30, 2018 - Present} % Validity
+%      \end{cvitems}
+%    }   
+%    \vspace{-0.1cm}
 %---------------------------------------------------------
   \cventry
     {Design Your First App with Build* (230.0/240)} % Certificate designation
@@ -91,21 +91,21 @@
     }      
     \vspace{-0.1cm}
 %---------------------------------------------------------
-  \cventry
-    {Be Visual! Sketching Basics for IT Business (70.7/80)} % Certificate designation
-    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
-    {} % Certifacion entity
-    %{Online} % Location
-    {} % Location
-    %{Sep. 6, 2017 - Oct. 12, 2017} % Date(s)      
-    {Sep. 2017 - Oct. 2017} % Date(s)          
-    {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities   
-        \item[] {Online Certificate: \url{https://open.sap.com/verify/xuhos-fogot-hytyc-pybin-helen}} %Certificate URL 
-        \item[] {Valid from Oct. 12, 2017 - Present} % Validity
-      \end{cvitems}
-    }      
-    \vspace{-0.1cm}
+%  \cventry
+%    {Be Visual! Sketching Basics for IT Business (70.7/80)} % Certificate designation
+%    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+%    {} % Certifacion entity
+%    %{Online} % Location
+%    {} % Location
+%    %{Sep. 6, 2017 - Oct. 12, 2017} % Date(s)      
+%    {Sep. 2017 - Oct. 2017} % Date(s)          
+%    {
+%	    \begin{cvitems} % Description(s) of tasks/responsibilities   
+%        \item[] {Online Certificate: \url{https://open.sap.com/verify/xuhos-fogot-hytyc-pybin-helen}} %Certificate URL 
+%        \item[] {Valid from Oct. 12, 2017 - Present} % Validity
+%      \end{cvitems}
+%    }      
+%    \vspace{-0.1cm}
 %---------------------------------------------------------
   \cventry
     {Developing Java-Based Apps on SAP Cloud Platform* (234.3/300)} % Certificate designation
@@ -123,36 +123,36 @@
     }    
     \vspace{-0.1cm}
 %---------------------------------------------------------
-  \cventry
-    {SAP HANA Cloud Platform* Essentials (300/360)} % Certificate designation
-    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
-    {} % Certifacion entity
-    %{Online} % Location
-    {} % Location
-    %{Feb. 7, 2017 - March 29, 2017} % Date(s)      
-    {Feb. 2017 - Mar. 2017} % Date(s)      
-    {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities   
-        \item[] {Online Certificate: \url{https://open.sap.com/verify/xulor-nynoz-soped-muvuv-zitek}} %Certificate URL 
-        \item[] {Valid from March 29, 2017 - Present} % Validity
-      \end{cvitems}
-    }        
-    \vspace{-0.1cm}
+%  \cventry
+%    {SAP HANA Cloud Platform* Essentials (300/360)} % Certificate designation
+%    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+%    {} % Certifacion entity
+%    %{Online} % Location
+%    {} % Location
+%    %{Feb. 7, 2017 - March 29, 2017} % Date(s)      
+%    {Feb. 2017 - Mar. 2017} % Date(s)      
+%    {
+%	    \begin{cvitems} % Description(s) of tasks/responsibilities   
+%        \item[] {Online Certificate: \url{https://open.sap.com/verify/xulor-nynoz-soped-muvuv-zitek}} %Certificate URL 
+%        \item[] {Valid from March 29, 2017 - Present} % Validity
+%      \end{cvitems}
+%    }        
+%    \vspace{-0.1cm}
 %---------------------------------------------------------  
-  \cventry
-    {Extending SAP S/4HANA with SAP HANA Cloud Platform* (254.0/360)} % Certificate designation
-    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
-    {} % Certifacion entity
-    %{Online} % Location
-    {} % Location
-    %{Jan. 11, 2017 - March 2, 2017} % Date(s)      
-    {Jan. 2017 - Mar. 2017} % Date(s)      
-    {
-	    \begin{cvitems} % Description(s) of tasks/responsibilities  
-        \item[] {Online Certificate: \url{https://open.sap.com/verify/xugal-vaseb-firih-zadyd-deniv}} %Certificate URL 
-        \item[] {Valid from Feb. 28, 2017 - Present} % Validity
-      \end{cvitems}
-    }
+%  \cventry
+%    {Extending SAP S/4HANA with SAP HANA Cloud Platform* (254.0/360)} % Certificate designation
+%    %{\href{https://www.sap.com/index.html}{SAP}} % Certifacion entity
+%    {} % Certifacion entity
+%    %{Online} % Location
+%    {} % Location
+%    %{Jan. 11, 2017 - March 2, 2017} % Date(s)      
+%    {Jan. 2017 - Mar. 2017} % Date(s)      
+%    {
+%	    \begin{cvitems} % Description(s) of tasks/responsibilities  
+%        \item[] {Online Certificate: \url{https://open.sap.com/verify/xugal-vaseb-firih-zadyd-deniv}} %Certificate URL 
+%        \item[] {Valid from Feb. 28, 2017 - Present} % Validity
+%      \end{cvitems}
+%    }
 %--------------------------------------------------------- 
   \cventry
     {CCNA Routing and Switching: Introduction to networks} % Certificate designation
