--- a/examples/resume/research_interests.tex
+++ b/examples/resume/research_interests.tex
@@ -21,13 +21,13 @@
 	  \vspace{-1.7cm}
       \begin{multicols}{2}
       \begin{cvitems}
-		\item {Computer/Video Games \& Gamification.}      
-        \item {Touch/Voice/Camera-based HCI technologies.}
-        \item {3D Animation/Modelling \& Geometrical Computing.}
+		%\item {Computer/Video Games \& Gamification.}      
+        %\item {Touch/Voice/Camera-based HCI technologies.}
+        %\item {3D Animation/Modelling \& Geometrical Computing.}
         \item {Mobile Applications Development.}
         \item {Artificial Intelligence, Robotics, and Cybernetics.}
         \item {Multi-Core CPU/GPU and Cloud computing.}
-        \item {Computational Fluids Dynamics (CFD).}
+        %\item {Computational Fluids Dynamics (CFD).}
         \item {Workforce scheduling \& management software.}
         %\item {Network Security \& Configuration \& Administration.}
       \end{cvitems}
