--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -40,21 +40,21 @@
 		\textcolor{rainbowcolor-indigo}{C\#\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
 		\textcolor{rainbowcolor-indigo}{Java\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
 		\textcolor{rainbowcolor-indigo}{ASP Classic\ref{5}{$^{[5]}$}},
-		\textcolor{rainbowcolor-indigo}{Prolog\ref{2}{$^{[2]}$}},
-		\textcolor{rainbowcolor-indigo}{OCaml\ref{2}{$^{[2]}$}},
+		%\textcolor{rainbowcolor-indigo}{Prolog\ref{2}{$^{[2]}$}},
+		%\textcolor{rainbowcolor-indigo}{OCaml\ref{2}{$^{[2]}$}},
 		\textcolor{rainbowcolor-indigo}{shell scripting\ref{4}{$^{[4]}$}},
 		\textcolor{rainbowcolor-indigo}{PL/SQL\ref{5}{$^{[5]}$}},
 		\textcolor{rainbowcolor-indigo}{T-SQL\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}},
 		\textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap\ref{5}{$^{[5]}$}},
 		\textcolor{rainbowcolor-indigo}{Angular %2/4 
 	    	\& Node.js\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-indigo}{Apache Math Commons\ref{4}{$^{[4]}$}},  
 	    \textcolor{rainbowcolor-indigo}{Apache Struts\ref{5}{$^{[5]}$}},
 	    \textcolor{rainbowcolor-indigo}{OpenGL\ref{4}{$^{[4]}$}},
-	    \textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$}},
+	    %\textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$}},
 	    \textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{6}{$^{[6]}$}},
 	    \textcolor{rainbowcolor-indigo}{UML\ref{2}{$^{[2]}$}},
-	    \textcolor{rainbowcolor-indigo}{LaTeX\ref{4}{$^{[4]}$}}.%,
-	    %\textcolor{rainbowcolor-indigo}{Beamer\ref{4}{$^{[4]}$}}.
+	    %\textcolor{rainbowcolor-indigo}{LaTeX\ref{4}{$^{[4]}$}}.
 	    }
 	  \end{cvitems}
     }  
@@ -82,28 +82,28 @@
         \textcolor{rainbowcolor-olive}{Apache Tomcat\ref{5}{$^{[5]}$}}, 
         %\textcolor{rainbowcolor-olive}{Blender\ref{2}{$^{[2]}$}}, 
         %\textcolor{rainbowcolor-olive}{JMonkeyEngine\ref{2}{$^{[2]}$}}, 
-        \textcolor{rainbowcolor-olive}{LibreOffice\ref{4}{$^{[4]}$}}, 
+        %\textcolor{rainbowcolor-olive}{LibreOffice\ref{4}{$^{[4]}$}}, 
         \textcolor{rainbowcolor-olive}{Eclipse\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}},  
         \textcolor{rainbowcolor-olive}{Netbeans\ref{4}{$^{[4]}$}}, 
         \textcolor{rainbowcolor-olive}{Oracle SQL developer\ref{6}{$^{[6]}$}},
         \textcolor{rainbowcolor-olive}{Visual Studio 2005-current\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
         \textcolor{rainbowcolor-olive}{Visual Studio Code\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{MS Office Suite\ref{6}{$^{[6]}$}},
+        %\textcolor{rainbowcolor-olive}{MS Office Suite\ref{6}{$^{[6]}$}},
         \textcolor{rainbowcolor-olive}{MS SQL-server 2012-2017\ref{2}{$^{[2]}$}\ref{6}{$^{[6]}$}},
 		%\textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS\ref{5}{$^{[5]}$}},
 		\textcolor{rainbowcolor-olive}{PowerBI\ref{5}{$^{[5]}$}}, 
-        \textcolor{rainbowcolor-olive}{Skype\ref{5}{$^{[5]}$}},
-        \textcolor{rainbowcolor-olive}{MS Teams\ref{5}{$^{[5]}$}},
+        %\textcolor{rainbowcolor-olive}{Skype\ref{5}{$^{[5]}$}},
+        %\textcolor{rainbowcolor-olive}{MS Teams\ref{5}{$^{[5]}$}},
         %\textcolor{rainbowcolor-olive}{WebEx\ref{5}{$^{[5]}$}},
         \textcolor{rainbowcolor-olive}{Google Chrome\ref{4}{$^{[4]}$}\ref{7}{$^{[7]}$}},
         \textcolor{rainbowcolor-olive}{MS Edge\ref{5}{$^{[5]}$}},
         \textcolor{rainbowcolor-olive}{Internet Explorer\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}},
-        \textcolor{rainbowcolor-olive}{Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
+        %\textcolor{rainbowcolor-olive}{Teamviewer\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},
         \textcolor{rainbowcolor-olive}{SoapUI\ref{5}{$^{[5]}$}},
         \textcolor{rainbowcolor-olive}{Postman\ref{6}{$^{[6]}$}},
         \textcolor{rainbowcolor-olive}{Swagger\ref{5}{$^{[5]}$}},    
-        \textcolor{rainbowcolor-olive}{Wireshark\ref{1}{$^{[1]}$}\ref{5}{$^{[5]}$}},    
-        \textcolor{rainbowcolor-olive}{Fiddler Everywhere\ref{5}{$^{[5]}$}},  
+        %\textcolor{rainbowcolor-olive}{Wireshark\ref{1}{$^{[1]}$}\ref{5}{$^{[5]}$}},    
+        %\textcolor{rainbowcolor-olive}{Fiddler Everywhere\ref{5}{$^{[5]}$}},  
         %\textbf{Mozilla Firefox} 
         %\textbf{Gimp}
         %\textbf{WhatsApp}\ref{5}{$^{[5]}$}
@@ -111,11 +111,11 @@
         %\textbf{UmbreloUML}\ref{2}{$^{[2]}$},
         %\textbf{Omnet++}\ref{2}{$^{[2]}$},
         %\textbf{Android Studio},
-        %\textcolor{rainbowcolor-olive}{Texmaker \& JabRef\ref{4}{$^{[4]}$}}, 
         \textcolor{rainbowcolor-olive}{IIS 6-8\ref{5}{$^{[5]}$}}.%,
         %\textcolor{rainbowcolor-olive}{VNC\ref{5}{$^{[5]}$}},
         %\textcolor{rainbowcolor-olive}{mRemote\ref{5}{$^{[5]}$}},
-        %\textcolor{rainbowcolor-olive}{Cisco AnyConnect\ref{5}{$^{[5]}$}}, %Cisco VPN client, 
+        %\textcolor{rainbowcolor-olive}{Cisco AnyConnect\ref{5}{$^{[5]}$}}, 
+        %\textcolor{rainbowcolor-olive}{Cisco VPN client\ref{5}{$^{[5]}$}}, 
 		%\textcolor{rainbowcolor-olive}{FortiClient\ref{5}{$^{[5]}$}}.
 		}
       \end{cvitems}
@@ -159,10 +159,12 @@
       \begin{cvitems} % Description(s)
         \item[] {
         \textcolor{rainbowcolor-orange}{MS Windows 2003-2016 server, XP - 10\ref{4}{$^{[4]}$}\ref{6}{$^{[6]}$}}, 
-        \textcolor{rainbowcolor-orange}{Linux (Ubuntu, Mint, Fedora, and OpenSuse)\ref{4}{$^{[4]}$}},
+        \textcolor{rainbowcolor-orange}{Linux% (Ubuntu, Mint, Fedora, and OpenSuse)
+\ref{4}{$^{[4]}$}}%,
         %Android\ref{8}{$^{[8]}$} 
         %iOS\ref{6}{$^{[6]}$}
-        \textcolor{rainbowcolor-orange}{CiscoIOS\ref{5}{$^{[5]}$}}.} 
+        %\textcolor{rainbowcolor-orange}{CiscoIOS\ref{5}{$^{[5]}$}}.
+        .} 
       \end{cvitems}
     }  
   \vspace{-0.6cm} 
