"Minor content updates & corrections."

--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -31,7 +31,7 @@
 		\textcolor{rainbowcolor-olive}{Internet Explorer}, 
 		%\textcolor{rainbowcolor-olive}{MS Teams}, 
 		%\textcolor{rainbowcolor-olive}{MS Office Suite}, 
-		\textcolor{rainbowcolor-orange}{Windows 10}.}			
+		\textcolor{rainbowcolor-orange}{Windows 10}}			
       \end{cvitems}		
     } 
 
@@ -54,7 +54,7 @@
 		\textcolor{rainbowcolor-indigo}{T-SQL}, 
 		\textcolor{rainbowcolor-indigo}{ASP classic}, 
 		\textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/XML}, 
-		\textcolor{rainbowcolor-orange}{Windows 10}.}		
+		\textcolor{rainbowcolor-orange}{Windows 10}}		
       \end{cvitems}
     } 
     
@@ -83,7 +83,7 @@
 		\textcolor{rainbowcolor-olive}{Oracle SQL developer},
 		\textcolor{rainbowcolor-indigo}{PL-SQL}, 
 		\textcolor{rainbowcolor-indigo}{Java 6-8}, 
-		\textcolor{rainbowcolor-orange}{Windows 7/10}.}		
+		\textcolor{rainbowcolor-orange}{Windows 7/10}}		
       \end{cvitems}
     } 
     
@@ -119,7 +119,7 @@
 		\textcolor{rainbowcolor-olive}{SSRS/SSIS/SSAS}, 
 		\textcolor{rainbowcolor-olive}{MS SQL-server 2012-2017}, 
 		\textcolor{rainbowcolor-indigo}{T-SQL}, 
-		\textcolor{rainbowcolor-orange}{Windows 7}.}		
+		\textcolor{rainbowcolor-orange}{Windows 7}}		
       \end{cvitems}
     } 
     
@@ -135,13 +135,13 @@
 Adaptive software development and integration with Model-Based architecture for an energy sector company. %(cannot disclose from which due to confidentiality agreement terms).
 Adaptive, perfective and corrective software maintenance for an information management system used in the areas of social action and health%(cannot disclose from which due to confidentiality agreement terms)
 , Aka X.
-Perfective and corrective software maintenance in the integration of an Azure AD login functionality within a vacation management online solution, Aka Y.}
+Perfective and corrective software maintenance in the integration of an Azure AD (AAD) login functionality within a vacation management online solution, Aka Y.}
 		\item[] {\textbf{Functions:} Integration of Uber-like functionalities into existing Model-Based architecture modules. PL-SQL database replication. Integration, algorithm development, and prototyping of route calculation and schedule assigning software into existing Model-Based architecture modules.
 		Extension and maintenance of all Model-View-Controller (MVC) functionalities to update and include new functionalities on X database. Functional and aesthetic bug resolution in views, controllers, and models of X.
 		Study of Azure AD usage scenarios. Y login integration with Azure AD.}		
 		\item[] {\textbf{Technologies:} 
 		\textcolor{rainbowcolor-olive}{Google Chrome}, 
-		\textcolor{rainbowcolor-olive}{Azure AD}, 
+		\textcolor{rainbowcolor-olive}{AAD}, 
 		%\textcolor{rainbowcolor-olive}{Slack}, 
 		\textcolor{rainbowcolor-olive}{TFS}, 
 		\textcolor{rainbowcolor-olive}{Git}, 
@@ -156,7 +156,7 @@ Perfective and corrective software maintenance in the integration of an Azure AD
 		\textcolor{rainbowcolor-indigo}{JSP/jQuery/Ajax/JSON/Bootstrap},
 		\textcolor{rainbowcolor-indigo}{Node.js}, 
 		\textcolor{rainbowcolor-indigo}{JavaScript}, 
-		\textcolor{rainbowcolor-orange}{Windows 7}.}	
+		\textcolor{rainbowcolor-orange}{Windows 7}}	
       \end{cvitems}
     } 
     
@@ -193,30 +193,25 @@ Perfective and corrective software maintenance in the integration of an Azure AD
     {Mar. 2008 - Dec. 2011} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-%		%\item[] {Implementation of a game engine to test state management processing, storage and communication techniques.}        
-%		\item[] {Engineering and design of a novel modular game engine architecture to test state management techniques.}
-%        \item[] {Implementation of Grid-based solutions to transform multi-player games into MMOGs.}
-%        %\item[] {Conducting research and review the state of art regarding Massive Multiplayer Online Games (MMOGs).}		
 		\item[] {\textbf{Context:} Research and Development of a browser-based game engine for MMOGs.}
-		\item[] {\textbf{Functions:} Develop a Java game engine prototype, to test state management algorithms. Assist in porting an existing multi-player game (Jake2) to a MMOFPS.%, resorting to GridGain. 
-%Implement fluid simulators in the GPU. 
+		\item[] {\textbf{Functions:} Develop a Java game engine prototype, to test state management algorithms. Assist in porting an existing multi-player game (Jake2) to a MMOFPS. %, resorting to GridGain. 
+Implement fluid simulators in the GPU. 
 Elaboration and public presentation of scientific conference articles.
 		}
 		\item[] {\textbf{Technologies:} 
 		\textcolor{rainbowcolor-olive}{Google Chrome}, 
 		\textcolor{rainbowcolor-olive}{NetBeans}, 
-		\textcolor{rainbowcolor-indigo}{GridGain}, 
+		%\textcolor{rainbowcolor-indigo}{GridGain}, 
 		%\textcolor{rainbowcolor-indigo}{Jgroups}, 
-		%\textcolor{rainbowcolor-indigo}{JogAmp}, 
 		\textcolor{rainbowcolor-indigo}{Apache Math Commons},
 		\textcolor{rainbowcolor-indigo}{OpenGL}, 
-		%\textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI},
+		\textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI},
 		\textcolor{rainbowcolor-indigo}{Java 1.6}, 
-		%\textcolor{rainbowcolor-indigo}{C/C++}, 
-		%\textcolor{rainbowcolor-indigo}{LaTeX}, 
+		\textcolor{rainbowcolor-indigo}{C/C++}, 
+		\textcolor{rainbowcolor-indigo}{LaTeX}, 
 		\textcolor{rainbowcolor-orange}{Linux% (Ubuntu, Mint, Fedora, and OpenSuse)
         }, 
-		\textcolor{rainbowcolor-orange}{Windows XP-7}.}
+		\textcolor{rainbowcolor-orange}{Windows XP-7}}
       \end{cvitems}
     }     
     
@@ -229,61 +224,58 @@ Elaboration and public presentation of scientific conference articles.
 		\linebreak and the
 		5385-Computer Science and Engineering: 		
 		\href{http://www.di.ubi.pt/~agomes/cg/}{Computer graphics} Course} % Job title
-%    {Lab Instructor for the 
-%        \href{http://www.di.ubi.pt/~agomes/tjv/}
-%        {Video Games Technologies} course} % Job title
     {\href{http://www.ubi.pt}{Universidade da Beira Interior} \textbf{(Academic)}} % Organization
     {Covilh\~a, Portugal} % Location
     {\linebreak Jan. 2012 - July 2016 \linebreak Jan. 2012 - July 2012} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-%		\item[] {Develop laboratory course material, including practical sheets and tests (available upon request).}
-%        %\item[] {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory.} 
-%        %\item[] {Participated in practical project joint assessment with course supervisor.}
         \item[] {Responsible for 0.5~hour lecture and supervision of 1.5~hour laboratory, and practical project joint assessment.}% with course supervisor	.}		
 		\item[] {\textbf{Context:} Lab. assistant in practical component of the video game technologies and computer graphics courses.}
 		\item[] {\textbf{Functions:} Develop lab. course material, including practical sheets and tests (available upon request). Responsible for 0.5 hour lecture and supervision of 1.5 hour lab. Participated in practical project joint assessment with course supervisor.}
 		\item[] {\textbf{Technologies:} 
+		\textcolor{rainbowcolor-olive}{Google Chrome}, 
 		%\textcolor{rainbowcolor-olive}{Whiteboard}, 
 		%\textcolor{rainbowcolor-olive}{LibreOffce}, 
-		%\textcolor{rainbowcolor-olive}{JmonkeyEngine}, 
+		\textcolor{rainbowcolor-olive}{Blender}, 
+		\textcolor{rainbowcolor-olive}{JmonkeyEngine}, 
 		\textcolor{rainbowcolor-olive}{NetBeans}, 		
 		\textcolor{rainbowcolor-olive}{Visual Studio 2005 \& 2008},
 		\textcolor{rainbowcolor-indigo}{OpenGL}, 
 		\textcolor{rainbowcolor-indigo}{Java 1.6-1.8},  
 		\textcolor{rainbowcolor-indigo}{C/C++}, 
-		%\textcolor{rainbowcolor-indigo}{LaTeX}, 
+		\textcolor{rainbowcolor-indigo}{LaTeX}, 
 		\textcolor{rainbowcolor-orange}{Linux% (Ubuntu, Mint, Fedora, and OpenSuse)
         }, 
-		\textcolor{rainbowcolor-orange}{Windows XP-7}.}
+		\textcolor{rainbowcolor-orange}{Windows XP-7}}
       \end{cvitems}
     }        
     
 %---------------------------------------------------------    
-%  \cventry    
-%    {Research Associate for <POCI/V/04.01302/0155/0002/2006, "Metodologias Din\^amicas para o Sucesso em Matem\'atica> Project} % Job title
-%    {} % Organization
-%    {} % Location
-%    {July 2007 - Apr. 2008} % Date(s)
-%    {
-%      \begin{cvitems} % Description(s) of tasks/responsibilities
-%%        \item[] {Creation of dynamic contents (presentations and work sheets) for theoretical and laboratory mathematics courses.}
-%%        \item[] {Integration of dynamic content with a content management system (CMS), assessment and extension of CMSs.}
-%		%\item[] {Research, implementation, and testing of novel modern ways to divulge a math department.}
-%		\item[] {\textbf{Context:} Develop dynamic ways to dynamize a math department and math teaching at an university level.}
-%		\item[] {\textbf{Functions:} Creation of dynamic contents (presentations and work sheets) for theoretical and laboratory mathematics courses, i.e., dynamic presentations intended to make math learning more interactive and available outside the class room.}
-%  		\item[] {\textbf{Technologies:} 
-%  		\textcolor{rainbowcolor-olive}{Blackboard}, 
-%  		\textcolor{rainbowcolor-olive}{Mathematica}, 
-%  		\textcolor{rainbowcolor-olive}{Matlab}, 
-%  		\textcolor{rainbowcolor-olive}{LaTeX},  
-%  		\textcolor{rainbowcolor-orange}{Windows XP}.}
-%      \end{cvitems}
-%    }  
+  \cventry    
+    {Research Associate for <POCI/V/04.01302/0155/0002/2006, "Metodologias Din\^amicas para o Sucesso em Matem\'atica> Project} % Job title
+    {} % Organization
+    {} % Location
+    {July 2007 - Apr. 2008} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+		\item[] {\textbf{Context:} Develop dynamic ways to dynamize a math department and math teaching at an university level.
+%Research, testing, and implementation of novel modern ways to divulge a math department.		
+		}
+		\item[] {\textbf{Functions:} Creation of dynamic contents (presentations and work sheets) for theoretical and laboratory mathematics courses, i.e., dynamic presentations intended to make math learning more interactive and available outside the class room.
+%Integration of dynamic content with a content management system (CMS), assessment and extension of CMSs.		
+		}
+  		\item[] {\textbf{Technologies:} 
+  		%\textcolor{rainbowcolor-olive}{Blackboard}, 
+  		%\textcolor{rainbowcolor-olive}{Mathematica}, 
+  		%\textcolor{rainbowcolor-olive}{Matlab}, 
+  		\textcolor{rainbowcolor-indigo}{LaTeX},  
+  		\textcolor{rainbowcolor-orange}{Windows XP}}
+      \end{cvitems}
+    }  
      
 %---------------------------------------------------------   
 \end{cventries}
 
-%\vspace{5.0cm}
+\vspace{5.0cm}
 
-\vspace{2.0cm}
+%\vspace{2.0cm}
