--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -51,10 +51,10 @@
         \textcolor{rainbowcolor-indigo}{Apache Math Commons\ref{4}{$^{[4]}$}},  
 	    \textcolor{rainbowcolor-indigo}{Apache Struts\ref{5}{$^{[5]}$}},
 	    \textcolor{rainbowcolor-indigo}{OpenGL\ref{4}{$^{[4]}$}},
-	    %\textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$}},
+	    \textcolor{rainbowcolor-indigo}{CUDA/OpenMP/OpenCL/MPI\ref{3}{$^{[3]}$}},
 	    \textcolor{rainbowcolor-indigo}{HTML/CSS/JavaScript/XML\ref{3}{$^{[3]}$}\ref{6}{$^{[6]}$}},
 	    \textcolor{rainbowcolor-indigo}{UML\ref{2}{$^{[2]}$}},
-	    %\textcolor{rainbowcolor-indigo}{LaTeX\ref{4}{$^{[4]}$}}.
+	    \textcolor{rainbowcolor-indigo}{LaTeX\ref{4}{$^{[4]}$}}.
 	    }
 	  \end{cvitems}
     }  
@@ -77,11 +77,12 @@
         %\textcolor{rainbowcolor-olive}{Slack\ref{5}{$^{[5]}$}}, 
         \textcolor{rainbowcolor-olive}{Git\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}}, 
         \textcolor{rainbowcolor-olive}{SVN\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
+        \textcolor{rainbowcolor-olive}{Apache AirFlow\ref{5}{$^{[5]}$}},
         \textcolor{rainbowcolor-olive}{Apache Maven\ref{2}{$^{[2]}$}\ref{5}{$^{[5]}$}},
         \textcolor{rainbowcolor-olive}{Apache Ant\ref{4}{$^{[4]}$}\ref{5}{$^{[5]}$}},  
         \textcolor{rainbowcolor-olive}{Apache Tomcat\ref{5}{$^{[5]}$}}, 
-        %\textcolor{rainbowcolor-olive}{Blender\ref{2}{$^{[2]}$}}, 
-        %\textcolor{rainbowcolor-olive}{JMonkeyEngine\ref{2}{$^{[2]}$}}, 
+        \textcolor{rainbowcolor-olive}{Blender\ref{2}{$^{[2]}$}}, 
+        \textcolor{rainbowcolor-olive}{JMonkeyEngine\ref{2}{$^{[2]}$}}, 
         %\textcolor{rainbowcolor-olive}{LibreOffice\ref{4}{$^{[4]}$}}, 
         \textcolor{rainbowcolor-olive}{Eclipse\ref{3}{$^{[3]}$}\ref{5}{$^{[5]}$}},  
         \textcolor{rainbowcolor-olive}{Netbeans\ref{4}{$^{[4]}$}}, 
