--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -34,9 +34,8 @@
         \textcolor{rainbowcolor-olive}{GIT}, 
         \textcolor{rainbowcolor-olive}{NetBeans}, 
         \textcolor{rainbowcolor-indigo}{Java 1.6-1.8}, 
-        \textcolor{rainbowcolor-indigo}{GridGain}, 
+        %\textcolor{rainbowcolor-indigo}{GridGain}, 
         \textcolor{rainbowcolor-indigo}{JGroups}, 
-        %\textcolor{rainbowcolor-indigo}{JogAmp}, 
         \textcolor{rainbowcolor-indigo}{OpenGL}, 
         \textcolor{rainbowcolor-indigo}{Apache Maven}, 
         \textcolor{rainbowcolor-indigo}{Apache Math Commons}, 
@@ -44,8 +43,7 @@
         %\textcolor{rainbowcolor-indigo}{LaTeX}, 
         \textcolor{rainbowcolor-orange}{Linux % (Ubuntu, Mint, Fedora, and OpenSuse)
         }, 
-        \textcolor{rainbowcolor-orange}{Windos XP-7}
-		.}
+        \textcolor{rainbowcolor-orange}{Windos XP-7}}
       \end{cvitems}
     }
 
@@ -65,7 +63,7 @@
 		%\item[] {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
 		%\item[] {\textbf{Context:} Bachelors final project consisting in extending with scene management techniques an existing Java video game, to explore grid computing frameworks and the possibility of converting multiplayer online video games into MMOGs.}
 		%\item[] {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding scene management in virtual environments. Evaluation of communication, storage, and computation grid solutions (e.g., GridGain). Implementation of existing techniques into an existing video game. Writing of the project final report and presentation, and oral presentation former.}
-		%\item[] {\textbf{Technologies:} Java 1.6, GridGain, Apache Math Commons, JogAmp, NetBeans, LaTeX.}
+		%\item[] {\textbf{Technologies:} Java 1.6, GridGain, Apache Math Commons, OpenGL, NetBeans, LaTeX.}
       %\end{cvitems}      
     }
   \vspace{-0.7cm}  
@@ -77,25 +75,24 @@
     {} % Location
     {Sept. 2007 - Oct. 2009} % Date(s)
     {
-%      \begin{cvitems} % Description(s) bullet points
-%        \item[] {\textbf{Thesis:} Real-Time 3D Rendering of Water using CUDA (19/20 points)}
-%        %\item[] {Area of Study: Natural Phenomena Real-Time Simulation}
-%        \item[] {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
-%		\item[] {\textbf{Context:} Extending a 2D fluids simulation algorithm to 3D in the GPU resorting to CUDA.}
-%		\item[] {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding fluid simulation in virtual environments. Porting a 2D fluids simulation (Jos Stam Stable fluids) algorithm to 3D in the GPU resorting to CUDA. Writing of journal/conference scientific articles and thesis, presentation of conference articles, and thesis oral presentation/defense.}
-%        \item[] {\textbf{Technologies:}  
-%        \textcolor{rainbowcolor-olive}{Visual Studio 2005-2008},
-%        \textcolor{rainbowcolor-indigo}{CUDA 2.0}, 
-%        \textcolor{rainbowcolor-indigo}{C/C++}, 
-%        %\textcolor{rainbowcolor-indigo}{LaTeX}, 
-%        \textcolor{rainbowcolor-orange}{Linux % (Ubuntu, Mint, Fedora, and OpenSuse)
-%        }, 
-%        \textcolor{rainbowcolor-orange}{Windos XP-7}       
-%      	.}
-%      \end{cvitems}
+      \begin{cvitems} % Description(s) bullet points
+        \item[] {\textbf{Thesis:} Real-Time 3D Rendering of Water using CUDA (19/20 points)}
+        %\item[] {Area of Study: Natural Phenomena Real-Time Simulation}
+        \item[] {\textbf{Supervisor:} \href{http://www.di.ubi.pt/~agomes/}{Professor Abel Gomes}}
+		\item[] {\textbf{Context:} Extending a 2D fluids simulation algorithm to 3D in the GPU resorting to CUDA.}
+		\item[] {\textbf{Functions:} Gathering/analysis of state-of-the-art regarding fluid simulation in virtual environments. Porting a 2D fluids simulation (Jos Stam Stable fluids) algorithm to 3D in the GPU resorting to CUDA. Writing of journal/conference scientific articles and thesis, presentation of conference articles, and thesis oral presentation/defense.}
+        \item[] {\textbf{Technologies:}  
+        \textcolor{rainbowcolor-olive}{Visual Studio 2005-2008},
+        \textcolor{rainbowcolor-indigo}{CUDA 2.0}, 
+        \textcolor{rainbowcolor-indigo}{C/C++}, 
+        %\textcolor{rainbowcolor-indigo}{LaTeX}, 
+        \textcolor{rainbowcolor-orange}{Linux % (Ubuntu, Mint, Fedora, and OpenSuse)
+        }, 
+        \textcolor{rainbowcolor-orange}{Windos XP-7}}
+      \end{cvitems}
     }
 	\hspace{-0.18cm}
-    \vspace{-0.6cm} 
+    %\vspace{-0.6cm} 
 %---------------------------------------------------------
   \cventry
     {\href{https://www.ubi.pt/en/course/42}{Bachelor's Degree in Computer Science and Engineering %(13/20 points)
